source/assets/stylesheets/pages/_mentors.scss
#mentor-img .col-md{
    width: 280px;
    text-align: left;
    img{
      width: 100% !important;
    }
  }

.sns{
  padding-bottom: 24px !important;
  text-align: right;
  a{
    color: $light-gray;
    margin-right: 4px;
    margin-left: 4px;
    &:hover{
      color: white;
      text-decoration: none;
    }
  }
}

hr{
  background-color: white;
  height: 0.3px;
  border-radius: 7px 7px 7px 7px;
}

.middle{
  text-align: center;
  margin-bottom: 32px;
}

@media (max-width: 960px){
  #mentor-img{
    width:90% !important;
  }
  .sns a{
    font-size: medium;
  }
}

@media (max-width: 720px){

  .sns a{
    font-size: medium;
  }
}

@media (max-width: 540px) {

  .sns a{
    font-size: small;
  }
}

